fixed the overlap

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,6 +8,8 @@
   background: #7ca3ea;
   border-bottom: 2px solid #b6d3ff;
   box-shadow: 0px 0px 40px #00000066;
+  position: relative;
+  overflow: hidden;
   .header-actions {
     display: flex;
     flex: 1;
@@ -42,11 +44,11 @@
         font-size: 15px; /* Adjust the label size as needed */
       }
       .circle {
-        position: absolute;
+        position: fixed;
         height: 14vw;
         width: 14vw;
         background: transparent;
-        outline: 4vw solid #d83131AA;
+        outline: 4vw solid #d83131aa;
         border-radius: 7vw;
       }
     }
